Bug 213651 - fails to build - hash_map
Summary: fails to build - hash_map
Status: RESOLVED FIXED
Alias: None
Product: bindings
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Solaris
: NOR normal
Target Milestone: ---
Assignee: bindings-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-08 10:24 UTC by tropikhajma
Modified: 2009-11-08 12:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (1.39 KB, patch)
2009-11-08 10:25 UTC, tropikhajma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tropikhajma 2009-11-08 10:24:17 UTC
Version:           4.3.73 (using Devel)
Compiler:          Sun Studio 12 U1 
OS:                Solaris
Installed from:    Compiled sources

building kdebindings 4.3.73 on opensolaris with Sun Studio 12U1 fails with
...
"/export/home/hajma/packages/BUILD/kdebindings-4.3.73svn1040395/generator/parser/lexer.h", line 144: Warning: index hides TokenStream::index.
"/export/home/hajma/packages/BUILD/kdebindings-4.3.73svn1040395/generator/parser/lexer.h", line 148: Warning: index hides TokenStream::index.
"/export/home/hajma/packages/BUILD/kdebindings-4.3.73svn1040395/generator/parser/parser.h", line 36: Error: Could not open include file<ext/hash_map>.
"/export/home/hajma/packages/BUILD/kdebindings-4.3.73svn1040395/generator/parser/parser.h", line 37: Error: __gnu_cxx is not defined.
"/export/home/hajma/packages/BUILD/kdebindings-4.3.73svn1040395/generator/parser/parser.h", line 264: Error: A class template name was expected instead of hash_map.
...
...


hash_map is not part of the C++ standard, should be replaced with std::map
Comment 1 tropikhajma 2009-11-08 10:25:31 UTC
Created attachment 38173 [details]
patch

this patch works for me on opensolaris, you'll likely need to refine it a bit
Comment 2 Arno Rehn 2009-11-08 12:42:58 UTC
SVN commit 1046309 by arnorehn:

Fix compilation on compilers other than msvc and g++.

BUG:213651



 M  +5 -1      parser.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1046309