Fix compilation on compilers other than msvc and g++.

BUG:213651


svn path=/trunk/KDE/kdebindings/generator/; revision=1046309