parser/parser.h
@@ -32,9 +32,13 @@
 #ifdef Q_CC_MSVC
 #include <hash_map>
 using namespace stdext;
-#else
+#elif defined(Q_CC_GNU)
 #include <ext/hash_map>
 using namespace __gnu_cxx;
+#else
+#include <map>
+// template typedefs aren't supported by C++ - resort to a #define for now.
+#define hash_map std::map
 #endif
 
 class TokenStream;
